k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6
        ports:
        - containerPort: 27017

        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db   # 👈 IMPORTANT

      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
